css/styles.css
/* =============================================================================
  #RESET
============================================================================= */
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0;margin:0 0 1em}


/* =============================================================================
  #TOOLS
============================================================================= */
html { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
*, *:before, *:after { -webkit-box-sizing: inherit; -moz-box-sizing: inherit; box-sizing: inherit; }


/* =============================================================================
  #GENERAL
============================================================================= */
* {
    font-family: inherit;
    line-height: inherit;
    color: inherit;
}

html {
    min-height: 100%;
    height: 100%;
}

body {
    padding: 0 30px;

    font-family: 'Poppins', Helvetica, Arial, Verdana, sans-serif;
    color: #a3a5ae;
    font-size: 15px;
    line-height: 1.6;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    background-color: #fafafa;
}


/* =============================================================================
  #CONTAINERS
============================================================================= */
.container {
}


/* =============================================================================
  #IMAGES
============================================================================= */
img {
  max-width: 100%;
  font-style: italic;
  font-size: 0.8em;
  vertical-align: middle;
}

img[width],
img[height] {
  max-width: none;
}


/* =============================================================================
  #TYPOGRAPHY
============================================================================= */
h1, h2, h3, h4, h5, h6 {
    color: #4c4e61;
}

h1 {
    margin-bottom: .5em;

    font-size: 2.4em;
    font-weight: 200;
}

@media (max-width: 639px) {
    h1 {
        font-size: 1.5em;
    }
}

    h1 strong {
        font-weight: 600;
    }

h2 {
    margin-bottom: .25em;
}

p {
    margin-bottom: 1em;

    font-weight: 400;
}


/* =============================================================================
  #CARD
============================================================================= */
.card {
    overflow: hidden;
    position: relative;
    display: flex;
    flex-direction: column;
    padding: 30px;

    background-color: #ffffff;
    border-radius: 6px;
    box-shadow: 0 12px 18px 0 #d7e1ed;
}

@media (max-width: 639px) {
    .card + .card {
        margin-top: 25px;
    }
}

    .card__icon {
        margin-top: auto;

        text-align: right;
    }

    .card p {
        font-size: 0.875em;
    }


/* Card themes */
.card::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 5px;
}

.card:nth-child(1)::before { background-color: #45d3d3; }
.card:nth-child(2)::before { background-color: #ea5353; }
.card:nth-child(3)::before { background-color: #fcaf4a; }
.card:nth-child(4)::before { background-color: #549ef2; }


/* =============================================================================
  #INTRO
============================================================================= */
.intro {
    margin: 90px auto;
    max-width: 520px;
    width: 100%;

    text-align: center;
}

    .intro *:last-child {
        margin-bottom: 0;
    }

/* =============================================================================
  #FEATURES
============================================================================= */
.features {
    margin: 90px auto;
    max-width: 1110px;
    width: 100%;
}

@media (min-width: 640px) {
    .features {
        display: flex;
        flex-wrap: wrap;
    }

        .features .card {
            margin: 15px;
            flex: 0 0 calc(50% - 30px);
        }
}

@media (min-width: 1080px) {
    .features {
        justify-content: space-around;
        align-items: center;
    }

    .features .card {
        flex: 0 0 calc(33% - 30px);
    }

    .features .card:nth-child(3) {
        order: 4;
    }

    .features .card:nth-child(1),
    .features .card:nth-child(4) {
        transform: translateY(50%);
    }
}


/* =============================================================================
  #ATTRIBUTION
============================================================================= */
.attribution {
    margin: 30px;

    text-align: center;
}

